--- a/MuzixApplicationMongodUser/pom.xml
+++ b/MuzixApplicationMongodUser/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.stackroute</groupId>
-	<artifactId>MuzixApplication</artifactId>
+	<artifactId>MuzixApplicationUser</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MuzixApplication</name>
+	<name>MuzixApplicationUser</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -28,10 +28,10 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -39,11 +39,12 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
+
 		<!--Swagger dependencies-->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -88,6 +89,7 @@
 			<!--<artifactId>spring-cloud-netflix-eureka-client</artifactId>-->
 			<!--<version>2.1.0.RC3</version>-->
 		<!--</dependency>-->
+
 	</dependencies>
 
 	<build>
