--- a/micro-service-zulu/pom.xml
+++ b/micro-service-zulu/pom.xml
@@ -20,18 +20,18 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
@@ -45,11 +45,11 @@
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<dependencyManagement>
@@ -80,5 +80,11 @@
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
 	</repositories>
-
+	<modules>
+		<module>configserver</module>
+		<module>eurekaservice</module>
+		<module>micro-service-zulu</module>
+		<module>MuzixApplicationMongodTrack</module>
+		<module>MuzixApplicationMongodUser</module>
+	</modules>
 </project>
