--- a/micro-service-zulu/src/main/resources/application.properties
+++ b/micro-service-zulu/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=zuul
-zuul.routes.track.url=http://localhost:8096
-zuul.routes.user.url=http://localhost:8095
+zuul.routes.track.url=https://localhost:8096
+zuul.routes.user.url=https://localhost:8095
 
 ribbon.eureka.enabled=true
 host.socket-timeout-millis=60000000
