--- a/MuzixApplicationMongodTrack/pom.xml
+++ b/MuzixApplicationMongodTrack/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.stackroute</groupId>
-	<artifactId>MuzixApplication</artifactId>
+	<artifactId>MuzixApplicationTrack</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MuzixApplication</name>
+	<name>MuzixApplicationTrack</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -21,10 +21,10 @@
 
 	<dependencies>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		<!--	<dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -32,11 +32,11 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+		<!--<dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-test</artifactId>
+                    <scope>test</scope>
+            </dependency-->
 		<!--Swagger dependencies-->
 		<dependency>
 			<groupId>io.springfox</groupId>
