--- a/micro-service-zulu/pom.xml
+++ b/micro-service-zulu/pom.xml
@@ -10,14 +10,16 @@
 
 	</parent>
 	<groupId>com.stackroute</groupId>
-	<artifactId>micro-service-zulu</artifactId>
+	<artifactId>micro-service-zuul</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>micro-service-zulu</name>
+	<name>micro-service-zuul</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+<!--
 		<spring-cloud.version>Greenwich.RC2</spring-cloud.version>
+-->
 	</properties>
 
 	<dependencies>
@@ -53,7 +55,7 @@
 		</dependency>-->
 	</dependencies>
 
-	<dependencyManagement>
+	<!--<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -63,7 +65,7 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
-	</dependencyManagement>
+	</dependencyManagement>-->
 
 	<build>
 		<plugins>
@@ -74,18 +76,12 @@
 		</plugins>
 	</build>
 
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
-	</repositories>
-	<modules>
-		<module>configserver</module>
-		<module>eurekaservice</module>
-		<module>micro-service-zulu</module>
-		<module>MuzixApplicationMongodTrack</module>
-		<module>MuzixApplicationMongodUser</module>
-	</modules>
+	</repositories>-->
+
 </project>
