--- a/MuzixApplicationMongodTrack/pom.xml
+++ b/MuzixApplicationMongodTrack/pom.xml
@@ -6,18 +6,22 @@
 		<groupId>com.stackroute</groupId>
 		<artifactId>microservicesupdated</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+<!--
 		<relativePath>../pom.xml</relativePath>
+-->
 
 	</parent>
 	<groupId>com.stackroute</groupId>
-	<artifactId>MuzixApplicationTrack</artifactId>
+	<artifactId>MuzixApplicationMongodTrack</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MuzixApplicationTrack</name>
+	<name>MuzixApplicationMongodTrack</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>11</java.version>
+<!--
 		<spring-cloud.version>Greenwich.RC2</spring-cloud.version>
+-->
 	</properties>
 
 	<dependencies>
