--- a/MuzixApplicationMongodUser/Dockerfile
+++ b/MuzixApplicationMongodUser/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:11.0-jdk
 
-ADD ./target/MuzixApplication-0.0.1-SNAPSHOT.jar /user/app/MuzixApplication-0.0.1-SNAPSHOT.jar
+ADD ./target/MuzixApplicationMongodUser-0.0.1-SNAPSHOT.jar /user/app/MuzixApplicationMongodUser-0.0.1-SNAPSHOT.jar
 
-EXPOSE 8096
+WORKDIR user/app
 
-ENTRYPOINT ["java", "-jar", "MuzixApplication-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "MuzixApplicationMongodUser-0.0.1-SNAPSHOT.jar"]
