--- a/micro-service-zulu/src/main/resources/application.properties
+++ b/micro-service-zulu/src/main/resources/application.properties
@@ -7,7 +7,7 @@ host.socket-timeout-millis=60000000
 
 server.port=8097
 
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone= http://172.23.239.110:8761/eureka/
 register-with-eureka= true
 fetch-registry= true
 management.security.enabled= false
