--- a/MuzixApplicationMongodUser/pom.xml
+++ b/MuzixApplicationMongodUser/pom.xml
@@ -29,10 +29,10 @@
 			<version>2.1.0.RELEASE</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
