--- a/eurekaservice/src/main/resources/bootstrap.yml
+++ b/eurekaservice/src/main/resources/bootstrap.yml
@@ -2,19 +2,10 @@ eureka:
     client:
         fetch-registry: false
         register-with-eureka: false
-logging:
-    level:
-        com:
-            netflix:
-                discovery: 'OFF'
-                eureka: 'OFF'
-management:
-    endpoints:
-        web:
-            exposure:
-                include: '*'
-#server:
-#    port: 8761
+        serviceUrl:
+            defaultZone: http://localhost:9091/eureka/
+server:
+    port: 9091
 spring:
     application:
         name: eureka
