--- a/micro-service-zulu/Dockerfile
+++ b/micro-service-zulu/Dockerfile
@@ -4,4 +4,6 @@ ADD ./target/micro-service-zuul-0.0.1-SNAPSHOT.jar /zuul/app/micro-service-zuul-
 
 WORKDIR zuul/app
 
+EXPOSE 8097
+
 ENTRYPOINT ["java", "-jar", "micro-service-zuul-0.0.1-SNAPSHOT.jar"]
