--- a/micro-service-zulu/pom.xml
+++ b/micro-service-zulu/pom.xml
@@ -19,9 +19,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-<!--
 		<spring-cloud.version>Greenwich.RC2</spring-cloud.version>
--->
 	</properties>
 
 	<dependencies>
@@ -74,7 +72,7 @@
     </dependency>-->
 	</dependencies>
 
-	<!--<dependencyManagement>
+	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -84,7 +82,7 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
-	</dependencyManagement>-->
+	</dependencyManagement>
 
 	<build>
 		<plugins>
@@ -95,12 +93,12 @@
 		</plugins>
 	</build>
 
-	<!--<repositories>
+	<repositories>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
-	</repositories>-->
+	</repositories>
 
 </project>
