zuul has ssl error

--- a/configserver/Dockerfile
+++ b/configserver/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:11.0-jdk
 
 ADD ./target/configserver-0.0.1-SNAPSHOT.jar /configserver/app/configserver-0.0.1-SNAPSHOT.jar
 
-#WORKDIR configserver/app
+WORKDIR configserver/app
 
 EXPOSE 8099
 
